--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -33,7 +33,7 @@
                      </button><br>
                    {{/course_editions_conducted}}
                    </p>
-                   <p><a class="btn" data-toggle="collapse" data-target="#viewLecturer{{id}}">Pokaż przedmioty &raquo;</a></p>
+                   <p><a class="btn" data-toggle="collapse" data-target="#viewLecturer{{id}}">Pokaż przedmioty</a></p>
                </div>
             </td></tr>
             </table>
