--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -1,6 +1,6 @@
 <table class="table table-hover table-responsive">
 <tbody>
-  <tr><td>Jednostka</td><td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td></tr>
+  <tr><td>Jednostka</td><td>{{fac_id.name}} {{fac_id.postal_address}} {{fac_id.phone_numbers}}</td></tr>
   {{#if lang_id}}
   <tr><td>Język prowadzenia</td><td>{{lang_id}}</td></tr>
   {{/if}}
@@ -9,7 +9,7 @@
   <tr><td>Opis</td><td>
       <div class="span4 collapse-group">
             <p class="collapse" id="viewdescription">{{nl2br description}}</p>
-            <p><a class="btn" data-toggle="collapse" data-target="#viewdescription">Pokaż opis &raquo;</a></p>
+            <p><a class="btn" data-toggle="collapse" data-target="#viewdescription">Pokaż opis</a></p>
        </div>
   </td></tr>
   {{/if}}
@@ -17,7 +17,7 @@
   <tr><td>Bibliografia</td><td>
        <div class="span4 collapse-group">
             <p class="collapse" id="viewbiblio">{{nl2br bibliography}}</p>
-            <p><a class="btn" data-toggle="collapse" data-target="#viewbiblio">Pokaż bibliografię &raquo;</a></p>
+            <p><a class="btn" data-toggle="collapse" data-target="#viewbiblio">Pokaż bibliografię</a></p>
        </div>
   </td></tr>
   {{/if}}
@@ -25,7 +25,7 @@
   <tr><td>Kryteria oceny</td><td>
       <div class="span4 collapse-group">
             <p class="collapse" id="viewcriteria">{{nl2br assessment_criteria}}</p>
-            <p><a class="btn" data-toggle="collapse" data-target="#viewcriteria">Pokaż kryteria &raquo;</a></p>
+            <p><a class="btn" data-toggle="collapse" data-target="#viewcriteria">Pokaż kryteria</a></p>
        </div>
   </td></tr>
   {{/if}}
