--- a/web/static/templates/register.html
+++ b/web/static/templates/register.html
@@ -9,7 +9,7 @@
 
     <div class="row">
         {{#data}}
-        <form id="f{{usos_id}}" class="form-horizontal" action="/authentication/create" method="post">
+        <form id="f{{usos_id}}" class="form-horizontal user-register-form" action="/authentication/create" method="post">
             <input type="hidden" name="usos" value="{{url}}">
             <div class="col-sm-6 col-md-2">
                 <div class="thumbnail">
