--- a/web/static/templates/login.html
+++ b/web/static/templates/login.html
@@ -1,12 +1,12 @@
 <div class="panel panel-default">
     <div class="btn-group">
-		<a class='btn btn-danger disabled'><i class="fa fa-google-plus"></i></a>
-		<a class='btn btn-danger' href='/authentication/google'> Sign in with Google</a>
+		<a class="btn btn-danger disabled"><i class="fa fa-google-plus"></i></a>
+		<a class="btn btn-danger login-button" href="/authentication/google"> Sign in with Google</a>
 	</div>
 	<br /><br />
 	<div class="btn-group">
-		<a class='btn btn-primary disabled'><i class="fa fa-facebook"></i></a>
-		<a class='btn btn-primary ' href='/authentication/facebook'> Sign in with Facebook</a>
+		<a class="btn btn-primary disabled"><i class="fa fa-facebook"></i></a>
+		<a class="btn btn-primary login-button" href="/authentication/facebook"> Sign in with Facebook</a>
 	</div>
 	<br /><br />
 </div>
