--- a/web/static/templates/programmes.html
+++ b/web/static/templates/programmes.html
@@ -14,7 +14,7 @@
             <tbody>
             {{#data}}
             <tr>
-                <td>{{programme.description.pl}}</td>
+                <td>{{programme.description}}</td>
                 <td>{{programme.id}}</td>
                 <td>{{programme.level_of_studies}}</td>
                 <td>{{programme.mode_of_studies}}</td>
