--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -42,8 +42,8 @@
                     <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button"
                        aria-haspopup="true" aria-expanded="false"><img src="static/img/login.png" width="24px"> Zaloguj <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/authentication/google" class="fa fa-google-plus login-button">Przez Google</a></li>
-                        <li><a href="/authentication/facebook" class="fa fa-facebook-official login-button"> Przez Facebook</a></li>
+                        <li><a href="/authentication/google" class="fa fa-google-plus login-button"> przez Google</a></li>
+                        <li><a href="/authentication/facebook" class="fa fa-facebook-official login-button"> przez Facebook</a></li>
                     </ul>
                 </li>
                 {{/if}}
