--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -11,6 +11,7 @@
             <tr><td>Godziny przyjęć</td><td>{{office_hours}}</td></tr>
             {{/if}}
             <tr><td>Pokój</td><td>{{room.building_id}} - {{room.building_name.pl}}</td></tr>
+            <tr><td>Email</td><td><a href="{{email_url}}" target="_blank">Pokaż email</a></td></tr>
             {{#if homepage_url}}
             <tr><td>Strona domowa</td><td><a href="{{homepage_url}}" target="_blank">{{homepage_url}}</a></td></tr>
             {{/if}}
