fix https://github.com/dzizes/kujon.io/issues/138 added for /#terms

--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -20,7 +20,7 @@
             </div>
             {{#data}}
             <div class="panel panel-table">
-                <div class="panel-heading" role="tab" id="heading{{user_id}}" ">
+                <div class="panel-heading" role="tab" id="heading{{user_id}}">
                     <div class="row">
                         <div class="col-md-6">
                             <a class="panel-row" lecturer-id="{{user_id}}" role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}" aria-expanded="false" aria-controls="collapse{{user_id}}">
