--- a/web/static/templates/terms.html
+++ b/web/static/templates/terms.html
@@ -3,7 +3,7 @@
         <h4>Cykle akademickie</h4>
     </div>
     <div class="panel-body">
-        <table class="table table-hover table-responsive">
+        <table id="terms-table" class="table table-hover table-responsive">
             <thead>
             <th>Nazwa</th>
             <th>Numer</th>
