--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,6 +8,8 @@
 
     <link href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ static_url('bower_components/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
+    <link href="{{ static_url('bower_components/DataTables-1.10.11/css/jquery.dataTables.min.css') }}" rel="stylesheet">
+
 
     <link href="{{ static_url('css/main.css') }}" rel="stylesheet">
     <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
