search and order on grades-table

--- a/web/static/templates/grades.html
+++ b/web/static/templates/grades.html
@@ -9,7 +9,7 @@
         -->
     </div>
     <div class="panel-body">
-        <table class="table table-hover table-responsive">
+        <table id="grades-table" class="table table-hover table-responsive">
             <thead>
             <th>Semestr</th>
             <th>Przedmiot</th>
