--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -45,7 +45,7 @@
         <td>
         {{#if has_photo}}
         <div class="img-thumbnail">
-            <img src="{{API_URL}}/api/users_info_photos/{{has_photo}}" >
+            <img src="{{has_photo}}" >
         </div>
         </td>
         {{/if}}
