--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -21,7 +21,7 @@
             <tbody>
                 <tr><td>USOS</td><td>{{usos_name}}</td></tr>
                 <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}}</td>
-                    <td>{{#if has_photo}}<img src="{{photo}}">{{/if}}</td>
+                    <td>{{#if has_photo}}<img src="{{has_photo}}">{{/if}}</td>
                 </tr>
                 <tr><td>Status studenta</td><td>{{student_status}}</td></tr>
                 <tr><td>Numer indeksu</td><td>{{student_number}}</td></tr>
