--- a/web/static/templates/user_details.html
+++ b/web/static/templates/user_details.html
@@ -4,7 +4,7 @@
         <td >
             <table class="table table-strip table-responsive">
             {{#if has_photo}}
-                <tr><td><img src="{{photo}}"></td></tr>
+                <tr><td><img src="{{has_photo}}"></td></tr>
             {{/if}}
             <tr><td>Status studenta</td><td>{{student_status}}</td></tr>
             {{#if student_number}}
