--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -6,3 +6,10 @@ body {
 .modal-dialog {
     width: 70%;
 }
+
+[data-toggle="collapse"].collapsed .if-not-collapsed {
+  display: none;
+}
+[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
+  display: none;
+}
