--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -6,28 +6,49 @@
   {{/if}}
   <tr><td>Czy jest prowadzony</td><td>{{is_currently_conducted}}</td></tr>
   {{#if description}}
-  <tr><td>Opis</td><td>
-      <div class="span4 collapse-group">
-            <p class="collapse" id="viewdescription">{{nl2br description}}</p>
-            <p><a class="btn" data-toggle="collapse" data-target="#viewdescription">Pokaż opis</a></p>
-       </div>
-  </td></tr>
+  <tr><td>Opis</td>
+      <td>
+      <div class="collapse" id="cD{{course_id}}">
+        <div class="well">
+        {{nl2br description}}
+        </div>
+      </div>
+      <a class="btn btn-default collapsed" data-toggle="collapse" href="#cD{{course_id}}">
+          <span class="if-collapsed">Pokaż opis</span>
+          <span class="if-not-collapsed">Ukryj opis</span>
+      </a>
+      </td>
+  </tr>
   {{/if}}
   {{#if bibliography}}
-  <tr><td>Bibliografia</td><td>
-       <div class="span4 collapse-group">
-            <p class="collapse" id="viewbiblio">{{nl2br bibliography}}</p>
-            <p><a class="btn" data-toggle="collapse" data-target="#viewbiblio">Pokaż bibliografię</a></p>
-       </div>
-  </td></tr>
+  <tr><td>Bibliografia</td>
+      <td>
+      <div class="collapse" id="cB{{course_id}}">
+        <div class="well">
+        {{nl2br bibliography}}
+        </div>
+      </div>
+      <a class="btn btn-default collapsed" data-toggle="collapse" href="#cB{{course_id}}">
+          <span class="if-collapsed">Pokaż bibliografię</span>
+          <span class="if-not-collapsed">Ukryj bibliografię</span>
+      </a>
+      </td>
+  </tr>
   {{/if}}
   {{#if assessment_criteria}}
-  <tr><td>Kryteria oceny</td><td>
-      <div class="span4 collapse-group">
-            <p class="collapse" id="viewcriteria">{{nl2br assessment_criteria}}</p>
-            <p><a class="btn" data-toggle="collapse" data-target="#viewcriteria">Pokaż kryteria</a></p>
-       </div>
-  </td></tr>
+  <tr><td>Kryteria oceny</td>
+      <td>
+      <div class="collapse" id="cC{{course_id}}">
+        <div class="well">
+        {{nl2br assessment_criteria}}
+        </div>
+      </div>
+      <a class="btn btn-default collapsed" data-toggle="collapse" href="#cC{{course_id}}">
+          <span class="if-collapsed">Pokaż kryteria</span>
+          <span class="if-not-collapsed">Ukryj kryteria</span>
+      </a>
+      </td>
+  </tr>
   {{/if}}
 
   <tr><td>Zajęcia w cyklu</td><td>{{term.name}}</td></tr>
