--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -1,12 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4>Przedmioty</h4>
-        <!--
-        <div class="btn-group pull-left">
-            <a class="btn btn-default btn-sm">Bieżący cykl</a>
-            <a class="btn btn-default btn-sm">Wszystkie cykle</a>
-        </div>
-        -->
     </div>
     <div class="panel-body">
         <div class="panel-group" id="accordionCourses" role="tablist" aria-multiselectable="true">
@@ -40,35 +34,5 @@
     </div>
 </div>
 
-
-<!-- Modal users-->
-<div class="modal fade bs-example-modal-lg" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="modalUsersLabel">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="modalUsersLabel"></h4>
-      </div>
-      <div class="modal-body">
-      </div>
-      <div class="modal-footer">
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal lecturers-->
-<div class="modal fade bs-example-modal-lg" id="modalLecturers" tabindex="-1" role="dialog" aria-labelledby="modalLecturersLabel">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="modalLecturersLabel"></h4>
-      </div>
-      <div class="modal-body">
-      </div>
-      <div class="modal-footer">
-      </div>
-    </div>
-  </div>
-</div>
+<div id="idLecturerModal"></div>
+<div id="idUserModal"></div>
