home, index and mail fix

--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -13,7 +13,7 @@
         {{nl2br description}}
         </div>
       </div>
-      <a class="btn btn-link collapsed" data-toggle="collapse" href="#cD{{course_id}}">
+      <a class="btn btn-default collapsed" data-toggle="collapse" href="#cD{{course_id}}">
           <span class="if-collapsed">Pokaż opis</span>
           <span class="if-not-collapsed">Ukryj opis</span>
       </a>
