--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -2,7 +2,7 @@
     <div class="site-wrapper-inner">
       <div class="cover-container">
         <div class="inner cover">
-            <h1 class="cover-heading">Kujon - Witamy ponownie</h1>
+            <h1 class="cover-heading">Kujon - Witamy </h1>
             <p class="lead">todo..</p>
       </div>
     </div>
