--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -17,7 +17,7 @@
                 <div class="panel-heading" role="tab" id="heading{{course_id}}" >
                     <div class="row">
                         <div class="col-md-6">
-                            <a class="panel-row" course-id="{{course_id}}" term-id="{{term_id}}" role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}" aria-expanded="false" aria-controls="collapse{{course_id}}">
+                            <a class="panel-row" course-id="{{replacebrackets course_id}}" term-id="{{term_id}}" role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{replacebrackets course_id}}" aria-expanded="false" aria-controls="collapse{{replacebrackets course_id}}">
                                 {{course_name}}
                             </a>
                         </div>
