--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -1,40 +1,97 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <table class="table table-hover table-responsive">
-            <caption>Informacje o użytkowniku</caption>
-            <thead>
-            <th></th><th></th>
-            </thead>
-            <tbody>
-                <tr><td>Imię i Nazwisko</td><td>{{name}} {{given_name}}</td><td><img src="{{picture}}" class="img-responsive" alt="Responsive image"></td></tr>
-                <tr><td>Konto</td><td>{{user_type}}</td><td></td></tr>
-                <tr><td>Email</td><td>{{email}}</td><td></td></tr>
-                <tr><td>Data utworzenia</td><td>{{user_created}}</td><td></td></tr>
-            </tbody>
-        </table>
+        <div class="media">
+            <div class="media-left">
+                <a href="#">
+                    <img class="media-object" src="{{picture}}" alt="{{name}}">
+                </a>
+            </div>
+            <div class="media-body">
+                <h3 class="media-heading">{{name}} {{given_name}}</h3>
+                <table class="table table-hover table-responsive">
+                    <thead>
+                    <th></th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Konto</td>
+                        <td>{{user_type}}</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td>{{email}}</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Data utworzenia</td>
+                        <td>{{user_created}}</td>
+                        <td></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-        <table class="table table-hover table-responsive">
-            <caption>Informacje z USOS</caption>
-            <thead>
-            <th></th><th></th>
-            </thead>
-            <tbody>
-                <tr><td>USOS</td><td>{{usos_name}}</td></tr>
-                <tr><td>Imię i Nazwisko</td><td>{{first_name}} {{last_name}}</td>
-                    <td>{{#if has_photo}}<img src="{{has_photo}}">{{/if}}</td>
-                </tr>
-                <tr><td>Status studenta</td><td>{{student_status}}</td></tr>
-                <tr><td>Numer indeksu</td><td>{{student_number}}</td></tr>
-                {{#if user_email}}
-                <tr><td>Email</td><td>{{user_email}}</td></tr>
-                {{/if}}
-                <tr><td>Kierunki</td><td></td></tr>
-                {{#student_programmes}}
-                    <tr><td>{{id}}</td><td>{{programme.description}} ({{programme.id}}) </td></tr>
-                {{/student_programmes}}
-                <tr><td>Numer konta</td><td>{{id}}</td></tr>
-            </tbody>
-        </table>
+
+        <div class="media">
+            <div class="media-left">
+                <a href="#">
+                    {{#if has_photo}}
+                    <img class="media-object" src="{{has_photo}}" alt="{{first_name}}">
+                    {{/if}}
+                </a>
+            </div>
+            <div class="media-body">
+                <h3 class="media-heading">Informacje z USOS</h3>
+                <table class="table table-hover table-responsive">
+                    <thead>
+                    <th></th>
+                    <th></th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>USOS</td>
+                        <td>{{usos_name}}</td>
+                    </tr>
+                    <tr>
+                        <td>Imię i Nazwisko</td>
+                        <td>{{first_name}} {{last_name}}</td>
+                    </tr>
+                    <tr>
+                        <td>Status studenta</td>
+                        <td>{{student_status}}</td>
+                    </tr>
+                    <tr>
+                        <td>Numer indeksu</td>
+                        <td>{{student_number}}</td>
+                    </tr>
+                    {{#if user_email}}
+                    <tr>
+                        <td>Email</td>
+                        <td>{{user_email}}</td>
+                    </tr>
+                    {{/if}}
+                    <tr>
+                        <td>Kierunki</td>
+                        <td></td>
+                    </tr>
+                    {{#student_programmes}}
+                    <tr>
+                        <td>{{id}}</td>
+                        <td>{{programme.description}} ({{programme.id}})</td>
+                    </tr>
+                    {{/student_programmes}}
+                    <tr>
+                        <td>Numer konta</td>
+                        <td>{{id}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
 
     </div>
 </div>
