--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -1,56 +1,30 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h4>Nauczyciele</h4>
-        <!--
-        <div class="btn-group pull-left">
-            <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">
-                <input type="text" class="form-control" id="dev-table-filter" data-action="filter" data-filters="#dev-table" placeholder="Szukaj.." />
-            </span>
-        </div>
-        -->
     </div>
     <div class="panel-body">
-        <div class="panel-group" id="accordionLecturers" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-table">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-md-6"><b></b></div>
-                    </div>
-                </div>
-            </div>
+        <table id="lecturers-table" class="table table-hover table-responsive">
+            <thead>
+            <th>Nazwisko</th>
+            <th>Imię</th>
+            <th>Semestr</th>
+            <th>Przedmiot</th>
+            <th></th>
+            </thead>
+            <tbody>
             {{#data}}
-            <div class="panel panel-table">
-                <div class="panel-heading" role="tab" id="heading{{user_id}}">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a class="panel-row" lecturer-id="{{user_id}}" role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}" aria-expanded="false" aria-controls="collapse{{user_id}}">
-                            {{last_name}} {{first_name}}
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div id="collapse{{user_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{user_id}}">
-                    <div class="panel-body" id="lecturerDetails{{user_id}}">
-                    </div>
-                </div>
-            </div>
+            <tr>
+                <td><a class="btn btn-link lecturer-btn" type="button" data-lecturerId="{{user_id}}">{{last_name}}</a></td>
+                <td>{{first_name}}</td>
+                <td>{{term_id}}</td>
+                <td>{{course_id}}</td>
+                <td>{{course_name}}</td>
+            </tr>
             {{/data}}
-        </div>
+            </tbody>
+        </table>
+
     </div>
 </div>
 
-<!-- Modal courses-->
-<div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="courseModal">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"></h4>
-      </div>
-      <div class="modal-body">
-      </div>
-      <div class="modal-footer">
-      </div>
-    </div>
-  </div>
-</div>
+<div id="modalWrapper"></div>
