--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -17,7 +17,7 @@
                 <td><a class="btn btn-link lecturer-btn" type="button" data-lecturerId="{{user_id}}">{{last_name}}</a></td>
                 <td>{{first_name}}</td>
                 <td>{{term_id}}</td>
-                <td>{{course_id}}</td>
+                <td><a class="btn btn-link course-btn" type="button" data-courseId="{{course_id}}" data-termId="{{term_id}}">{{course_id}}</a></td>
                 <td>{{course_name}}</td>
             </tr>
             {{/data}}
