--- a/web/static/templates/modal_course.html
+++ b/web/static/templates/modal_course.html
@@ -1,110 +1,141 @@
-<table class="table table-hover table-responsive">
-    <tbody>
-    <tr>
-        <td>Jednostka</td>
-        <td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td>
-    </tr>
-    {{#if lang_id}}
-    <tr>
-        <td>Język prowadzenia</td>
-        <td>{{lang_id}}</td>
-    </tr>
-    {{/if}}
-    <tr>
-        <td>Czy jest prowadzony</td>
-        <td>{{is_currently_conducted}}</td>
-    </tr>
-    {{#if description}}
-    <tr>
-        <td>Opis</td>
-        <td>
-        <div class="collapse" id="cD{{course_id}}">
-            <div class="well">
-            {{nl2br description}}
+<div class="modal fade" id="courseModal{{courseId}}" tabindex="-1" role="dialog"
+     aria-labelledby="lecturerModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="lecturerModalLabel">{{course_id}}</h4>
+            </div>
+            <div class="modal-body">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            {{#if has_photo}}
+                            <img class="media-object" src="{{has_photo}}" alt="...">
+                            {{/if}}
+                        </a>
+                    </div>
+                    <div class="media-body">
+
+                        <table class="table table-hover table-responsive">
+                            <tbody>
+                            <tr>
+                                <td>Jednostka</td>
+                                <td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td>
+                            </tr>
+                            {{#if lang_id}}
+                            <tr>
+                                <td>Język prowadzenia</td>
+                                <td>{{lang_id}}</td>
+                            </tr>
+                            {{/if}}
+                            <tr>
+                                <td>Czy jest prowadzony</td>
+                                <td>{{is_currently_conducted}}</td>
+                            </tr>
+                            {{#if description}}
+                            <tr>
+                                <td>Opis</td>
+                                <td>
+                                    <div class="collapse" id="cD{{course_id}}">
+                                        <div class="well">
+                                            {{nl2br description}}
+                                        </div>
+                                    </div>
+                                    <a class="btn btn-default collapsed" data-toggle="collapse" href="#cD{{course_id}}">
+                                        <span class="if-collapsed">Pokaż opis</span>
+                                        <span class="if-not-collapsed">Ukryj opis</span>
+                                    </a>
+                                </td>
+                            </tr>
+                            {{/if}}
+                            {{#if bibliography}}
+                            <tr>
+                                <td>Bibliografia</td>
+                                <td>
+                                    <div class="collapse" id="cB{{course_id}}">
+                                        <div class="well">
+                                            {{nl2br bibliography}}
+                                        </div>
+                                    </div>
+                                    <a class="btn btn-default collapsed" data-toggle="collapse" href="#cB{{course_id}}">
+                                        <span class="if-collapsed">Pokaż bibliografię</span>
+                                        <span class="if-not-collapsed">Ukryj bibliografię</span>
+                                    </a>
+                                </td>
+                            </tr>
+                            {{/if}}
+                            {{#if assessment_criteria}}
+                            <tr>
+                                <td>Kryteria oceny</td>
+                                <td>
+                                    <div class="collapse" id="cC{{course_id}}">
+                                        <div class="well">
+                                            {{nl2br assessment_criteria}}
+                                        </div>
+                                    </div>
+                                    <a class="btn btn-default collapsed" data-toggle="collapse" href="#cC{{course_id}}">
+                                        <span class="if-collapsed">Pokaż kryteria</span>
+                                        <span class="if-not-collapsed">Ukryj kryteria</span>
+                                    </a>
+                                </td>
+                            </tr>
+                            {{/if}}
+                            {{#if term}}
+                            <tr>
+                                <td>Zajęcia w cyklu</td>
+                                <td>{{term.name}}</td>
+                            </tr>
+                            <tr>
+                                <td>Okres</td>
+                                <td>{{term.start_date}} - {{term.end_date}}</td>
+                            </tr>
+                            {{/if}}
+                            <tr>
+                                <td>Prowadzący grup</td>
+                                <td>
+                                    {{#lecturers}}
+                                    {{first_name}} {{last_name}},
+                                    {{/lecturers}}
+                                </td>
+                            </tr>
+                            {{#if coordinators}}
+                            <tr>
+                                <td>Koordynatorzy</td>
+                                <td>
+                                    {{#coordinators}}
+                                    {{first_name}} {{last_name}},
+                                    {{/coordinators}}
+                                </td>
+                            </tr>
+                            {{/if}}
+                            {{#groups}}
+                            <tr>
+                                <td>Typ zajęć</td>
+                                <td>{{class_type}}, numer grupy: {{group_number}}</td>
+                            </tr>
+                            {{/groups}}
+                            {{#if participants}}
+                            <tr>
+                                <td>Studenci</td>
+                                <td>
+                                    {{#participants}}
+                                    {{last_name}} {{first_name}},
+                                    {{/participants}}
+                                </td>
+                            </tr>
+                            {{/if}}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
             </div>
         </div>
-        <a class="btn btn-default collapsed" data-toggle="collapse" href="#cD{{course_id}}">
-            <span class="if-collapsed">Pokaż opis</span>
-            <span class="if-not-collapsed">Ukryj opis</span>
-        </a>
-        </td>
-    </tr>
-    {{/if}}
-    {{#if bibliography}}
-    <tr>
-        <td>Bibliografia</td>
-        <td>
-        <div class="collapse" id="cB{{course_id}}">
-            <div class="well">
-            {{nl2br bibliography}}
-            </div>
-        </div>
-        <a class="btn btn-default collapsed" data-toggle="collapse" href="#cB{{course_id}}">
-            <span class="if-collapsed">Pokaż bibliografię</span>
-            <span class="if-not-collapsed">Ukryj bibliografię</span>
-        </a>
-        </td>
-    </tr>
-    {{/if}}
-    {{#if assessment_criteria}}
-    <tr>
-        <td>Kryteria oceny</td>
-        <td>
-        <div class="collapse" id="cC{{course_id}}">
-            <div class="well">
-            {{nl2br assessment_criteria}}
-            </div>
-        </div>
-        <a class="btn btn-default collapsed" data-toggle="collapse" href="#cC{{course_id}}">
-            <span class="if-collapsed">Pokaż kryteria</span>
-            <span class="if-not-collapsed">Ukryj kryteria</span>
-        </a>
-        </td>
-    </tr>
-    {{/if}}
-    {{#if term}}
-    <tr>
-        <td>Zajęcia w cyklu</td>
-        <td>{{term.name}}</td>
-    </tr>
-    <tr>
-        <td>Okres</td>
-        <td>{{term.start_date}} - {{term.end_date}}</td>
-    </tr>
-    {{/if}}
-    <tr>
-        <td>Prowadzący grup</td>
-        <td>
-            {{#lecturers}}
-            {{first_name}} {{last_name}},
-            {{/lecturers}}
-        </td>
-    </tr>
-    {{#if coordinators}}
-    <tr>
-        <td>Koordynatorzy</td>
-        <td>
-            {{#coordinators}}
-            {{first_name}} {{last_name}},
-            {{/coordinators}}
-        </td>
-    </tr>
-    {{/if}}
-    {{#groups}}
-    <tr>
-        <td>Typ zajęć</td>
-        <td>{{class_type}}, numer grupy: {{group_number}}</td>
-    </tr>
-    {{/groups}}
-    {{#if participants}}
-    <tr>
-        <td>Studenci</td>
-        <td>
-            {{#participants}}
-            {{last_name}} {{first_name}},
-            {{/participants}}
-        </td>
-    </tr>
-    {{/if}}
-    </tbody>
-</table>
+    </div>
+</div>
