--- a/web/static/templates/modal_course.html
+++ b/web/static/templates/modal_course.html
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="lecturerModalLabel">{{course_id}}</h4>
+                <h4 class="modal-title" id="lecturerModalLabel">{{name}} ({{course_id}})</h4>
             </div>
             <div class="modal-body">
                 <div class="media">
