--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -36,14 +36,14 @@
             <ul class="nav navbar-nav navbar-right">
                 <li id="spinner"><a class="fa fa-spinner fa-pulse"></a></li>
                 {{#if USER_LOGGED }}
-                <li><a href="/authentication/logout" class="login-button"><img src="static/img/logout.png" width="24px"> Wyloguj</a></li>
+                <li><a href="{{API_URL}}/authentication/logout" class="login-button"><img src="static/img/logout.png" width="24px"> Wyloguj</a></li>
                 {{else}}
                 <li class="dropdown" href="#login">
-                    <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                    <a href="{{API_URL}}/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button"
                        aria-haspopup="true" aria-expanded="false"><img src="static/img/login.png" width="24px"> Zaloguj <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/authentication/google" class="fa fa-google-plus login-button"> przez Google</a></li>
-                        <li><a href="/authentication/facebook" class="fa fa-facebook-official login-button"> przez Facebook</a></li>
+                        <li><a href="{{API_URL}}/authentication/google" class="fa fa-google-plus login-button"> przez Google</a></li>
+                        <li><a href="{{API_URL}}/authentication/facebook" class="fa fa-facebook-official login-button"> przez Facebook</a></li>
                     </ul>
                 </li>
                 {{/if}}
