--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -20,6 +20,7 @@
                     <li><a href="#courses">Przedmioty</a></li>
                     <li><a href="#grades">Oceny</a></li>
                     <li><a href="#lecturers">Nauczyciele</a></li>
+                    <li><a href="#friends">Znajomi</a></li>
 
                     <li class="dropdown">
                           <a class="dropdown-toggle" data-toggle="dropdown" role="button"
